--- a/views/update-book.pug
+++ b/views/update-book.pug
@@ -2,7 +2,12 @@ extends layout
 
 block content
     h1 Update Book
-    form
+    form(action="/books/" + book.id, method="post")
+      if(errors)
+        h2.error Oooops!
+        ul.error
+          each error in errors
+            li= error.message
       p
         label(for='title') Title
         input#title(name='title' type='text' value=book.title)
